--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -91,3 +91,14 @@ a.signup_button {
 .round {
 	border-radius: 10px;
 }
+
+/* FOOTER */
+
+footer {
+	text-align: center;
+	margin-top: 10px;
+	float: none;
+	width: 710px;
+	margin-left: auto;
+	margin-right: auto;
+}
