--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -24,6 +24,10 @@ section {
 	background-color: #fff;
 }
 
+section h1 {
+	font-size: 200%;
+}
+
 /* LINKS */
 
 a {
@@ -94,7 +98,7 @@ a.signup_button {
 
 /* FOOTER */
 
-footer {
+footer nav {
 	text-align: center;
 	margin-top: 10px;
 	float: none;
