--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,10 @@
 <h1>Sign Up</h1>
 
 <%= form_for(@user) do |f| %>
+
+  <%= render 'shared/error_messages' %>
   <div class="field">
-    <%= f.label :name, "Your Name" %><br />
+    <%= f.label :name %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
